[package]
name = "webapp"
version = "0.1.0"
edition = "2024"

[package.metadata]
description = "A simple web application using Rust and Axum"
authors = ["takashialpha <takashialpha@protonmail.com>"]
license = "Apache-2.0"

[dependencies]
axum = "0.8.4"
num_cpus = "1.17.0"
socket2 = "0.5.10"
tokio = { version = "1.46.0", features = ["full"] }

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false
incremental = false
